--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "toastr": "~2.1.2",
     "angular": "^1.4.9",
     "angular-route": "^1.4.9",
-    "angular-resource": "^1.4.9"
+    "angular-resource": "^1.4.9",
+    "bootstrap": "^3.3.6"
   }
 }
