--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "jade": "^1.11.0",
     "mongoose": "^4.3.7",
     "morgan": "^1.6.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "stylus": "*"
   },
   "devDependencies": {
