--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "skeleton",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": "true",
   "repository": "https://github.com/ketus/Mean-app.git",
   "description": "Skeleton for MEAN apps",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
