--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular": "^1.4.9",
     "angular-route": "^1.4.9",
     "angular-resource": "^1.4.9",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "angular-mocks": "^1.5.0"
   }
 }
