--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "stylus": "*"
   },
   "devDependencies": {
-    "bower": "^1.7.7"
+    "bower": "^1.7.7",
+    "karma": "^0.13.19",
+    "karma-chai-plugins": "^0.6.1",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-mocha": "^0.2.1",
+    "mocha": "^2.4.5"
   }
 }
