--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "Skeleton for MEAN apps",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ketus",
